[#950] Time is now considered when sorting by date.

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -266,7 +266,7 @@
                                     Favorite
                                 {% endif %}
                             </td>
-                            <td>{{ res.updated|date:"Y/m/d" }}</td>
+                            <td>{{ res.updated|date:"Y/m/d H:i:s" }}</td>
                             <td>
                                 {% if res.raccess.public %}
                                     <strong class="label-public">&nbspPublic</strong>
