[#839] add testing code

--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -261,7 +261,7 @@
             var url_collection_member_permission = "/hsapi/_internal/" + collection_obj_res_id
                     + "/collection-member-permission/" + target_user_id + "/";
             $.ajax({
-                type: "POST",
+                type: "GET",
                 url: url_collection_member_permission,
                 dataType: 'html',
                 data: "",
