[#948] fix the bug to show CellSizeXValue data on landing page

--- a/hs_geo_raster_resource/templates/pages/rasterresource.html
+++ b/hs_geo_raster_resource/templates/pages/rasterresource.html
@@ -78,7 +78,7 @@
 
                     <tr>
                         <th class="text-muted">CellSizeXValue</th>
-                        <td{{ cellInformation.cellSizeXValue }}></td>
+                        <td>{{ cellInformation.cellSizeXValue }}</td>
                     </tr>
 
                     <tr>
