--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -287,7 +287,7 @@
                     {
                         $('#save-collection-warning-body').text("");
                         var h_tag = $("<h5 />", {
-                                    text : "The target user has no permission to view the following member resources in this collection: "
+                                    text : "The target user has no permission to view the following member resource(s) in this collection: "
                                 });
                         $('#save-collection-warning-body').append(h_tag);
                         for (i=0; i<json_response.no_permission_list.length; i++)
