--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2,12 +2,12 @@
 
 {% for source in source_formset.initial %}
 <div class="modal fade in" id="delete-source-element-dialog{{ source.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="false">
+     aria-labelledby="delete-source" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Delete metadata element</h4></div>
+                <h4 class="modal-title" id="delete-source">Delete metadata element</h4></div>
             <div class="modal-body"><strong>Are you sure you want to delete this metadata element?</strong>
             </div>
             <div class="modal-footer">
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="modal fade in" id="edit-source-dialog{{ source.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade in" id="edit-source-dialog{{ source.id }}" tabindex="-1" role="dialog" aria-labelledby="edit-source"
      aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -29,7 +29,7 @@
                 <input name="resource-mode" type="hidden" value="edit">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel"> Edit Source </h4></div>
+                    <h4 class="modal-title" id="edit-source"> Edit Source </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
                     <div class="form-group">
@@ -60,12 +60,12 @@
 
 {% for relation in relation_formset.initial %}
 <div class="modal fade in" id="delete-relation-element-dialog{{ relation.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="false">
+     aria-labelledby="delete-relation" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Delete metadata element</h4></div>
+                <h4 class="modal-title" id="delete-relation">Delete metadata element</h4></div>
             <div class="modal-body"><strong>Are you sure you want to delete this metadata element?</strong>
             </div>
             <div class="modal-footer">
@@ -78,7 +78,7 @@
 </div>
 
 <div class="modal fade in" id="edit-relation-dialog_{{ relation.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="false">
+     aria-labelledby="edit-relation" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="/hsapi/_internal/{{ cm.short_id }}/relation/{{ relation.id }}/update-metadata/"
@@ -87,7 +87,7 @@
                 <input name="resource-mode" type="hidden" value="edit">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel"> Edit Relation </h4></div>
+                    <h4 class="modal-title" id="edit-relation"> Edit Relation </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
 
@@ -132,7 +132,7 @@
 
 {% for contributor in contributor_formset.initial %}
 <div class="modal fade" id="edit-contributor-dialog{{ contributor.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="true">
+     aria-labelledby="edit-contributor" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form id="id_contributor_{{ contributor.id }}" action="/hsapi/_internal/{{ cm.short_id }}/contributor/{{ contributor.id }}/update-metadata/"
@@ -145,7 +145,7 @@
                     <button type="button" class="close" data-dismiss="modal"
                             aria-hidden="true">×
                     </button>
-                    <h4 class="modal-title" id="myModalLabel"> Edit contributor </h4></div>
+                    <h4 class="modal-title" id="edit-contributor"> Edit contributor </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
                     <div class="form-group">
@@ -228,12 +228,12 @@
 </div>
 
 <div class="modal fade" id="delete-contributor-dialog{{ contributor.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="true">
+     aria-labelledby="delete-contributor" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Delete metadata element</h4></div>
+                <h4 class="modal-title" id="delete-contributor">Delete metadata element</h4></div>
             <div class="modal-body"><strong>Are you sure you want to delete this metadata element?</strong>
             </div>
             <div class="modal-footer">
@@ -248,7 +248,7 @@
 
 {% for author in creator_formset.initial %}
 <div class="modal fade" id="edit-creator-dialog{{ author.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="true">
+     aria-labelledby="edit-creator" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form id="id_creator_{{ author.id }}" action="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/update-metadata/"
@@ -261,7 +261,7 @@
                     <button type="button" class="close" data-dismiss="modal"
                             aria-hidden="true">×
                     </button>
-                    <h4 class="modal-title" id="myModalLabel"> Edit author </h4></div>
+                    <h4 class="modal-title" id="edit-creator"> Edit author </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
                     <div class="form-group">
@@ -351,12 +351,12 @@
 </div>
 
 <div class="modal fade" id="delete-creator-dialog{{ author.id }}" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="true">
+     aria-labelledby="delete-creator" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Delete metadata element</h4></div>
+                <h4 class="modal-title" id="delete-creator">Delete metadata element</h4></div>
             <div class="modal-body"><strong>Are you sure you want to delete this metadata element?</strong>
             </div>
             <div class="modal-footer">
@@ -373,7 +373,7 @@
     {% include "irods_upload_add.html" %}
 {%  block modal_publish_resource %}
     <div class="modal fade" id="submit-for-publication-dialog" tabindex="-1" role="dialog"
-         aria-labelledby="myModalLabel" aria-hidden="true">
+         aria-labelledby="submit-for-publication-title" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -398,7 +398,7 @@
     </div>
 {%  endblock %}
 
-<div class="modal fade" id="add-source-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade" id="add-source-dialog" tabindex="-1" role="dialog" aria-labelledby="add-source"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -409,7 +409,7 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel">Add Source</h4></div>
+                    <h4 class="modal-title" id="add-source">Add Source</h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
 
@@ -438,7 +438,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="add-relation-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade" id="add-relation-dialog" tabindex="-1" role="dialog" aria-labelledby="add-relation"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -449,7 +449,7 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel"> Add Relation </h4></div>
+                    <h4 class="modal-title" id="add-relation"> Add Relation </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
 
@@ -489,7 +489,7 @@
 </div>
 
 {% block modal_delete_resource %}
-    <div class="modal fade" id="delete-resource-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    <div class="modal fade" id="delete-resource-dialog" tabindex="-1" role="dialog" aria-labelledby="delete-resource-title"
          aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -517,32 +517,8 @@
     </div>
 {%  endblock %}
 
-<div class="modal fade" id="add-dcterm-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form action="/hsapi/_internal/{{ cm.short_id }}/add-metadata/">
 
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Add metadata term</h4>
-                </div>
-                <div class="modal-body">
-                    {% csrf_token %}
-
-                    {{ dcterm_frm|crispy }}
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="add-reference-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade" id="add-reference-dialog" tabindex="-1" role="dialog" aria-labelledby="add-reference"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -550,7 +526,7 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Add reference</h4>
+                    <h4 class="modal-title" id="add-reference">Add reference</h4>
                 </div>
                 <div class="modal-body">
                     {% csrf_token %}
@@ -569,7 +545,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="add-creator-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="add-creator-dialog" tabindex="-1" role="dialog" aria-labelledby="add-creator" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="/hsapi/_internal/{{ cm.short_id }}/creator/add-metadata/" method="POST"
@@ -579,7 +555,7 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel"> Add author </h4></div>
+                    <h4 class="modal-title" id="add-creator"> Add author </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
                     <div class="form-group">
@@ -648,7 +624,7 @@
 </div>
 
 <div class="modal fade in" id="add-contributor-dialog" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="true">
+     aria-labelledby="add-contributor" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="/hsapi/_internal/{{ cm.short_id }}/contributor/add-metadata/"
@@ -658,7 +634,7 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myModalLabel"> Add Contributor </h4></div>
+                    <h4 class="modal-title" id="add-contributor"> Add Contributor </h4></div>
                 <div class="modal-body">
                     {% csrf_token %}
                     <div class="form-group">
@@ -740,7 +716,7 @@
 
 <!-- Modal -->
 {%  block modal_add_file %}
-<div class="modal fade" id="add-file-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade" id="add-file-dialog" tabindex="-1" role="dialog" aria-labelledby="add-file"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -749,7 +725,7 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Add file to resource</h4>
+                    <h4 class="modal-title" id="add-file">Add file to resource</h4>
                 </div>
                 <div class="modal-body">
                     {% csrf_token %}
