--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -184,14 +184,21 @@
                 </div>
             {% endif %}
         {% else %}
-            {% if cm.raccess.public %}
-                <strong class="label-public">&nbspPublic</strong>
+            {% if cm.raccess.published %}
+                <strong class="label-public">&nbsp;Published</strong>
+            {% elif cm.raccess.public %}
+                <strong class="label-public">&nbsp;Public</strong>
             {% elif cm.raccess.discoverable %}
-                <strong class="label-discoverable">&nbspDiscoverable</strong>
+                <strong class="label-discoverable">&nbsp;Discoverable</strong>
             {% else %}
-                <strong class="label-private">&nbspPrivate</strong>
+                <strong class="label-private">&nbsp;Private</strong>
             {% endif %}
-            &{% if cm.raccess.shareable %}<strong style="color:#5cb85c">&nbspShareable</strong>{% else %}<strong style="color:#d9534f">&nbspNot Shareable</strong>{% endif %}
+            {% if cm.raccess.published %}
+                {% if "pending" in cm.doi or "failure" in cm.doi %}&#8210; Note that the DOI will not be available until
+                    it has been registered and activated.{% endif %}
+            {% else %}
+                &{% if cm.raccess.shareable %}<strong style="color:#5cb85c">&nbsp;Shareable</strong>{% else %}<strong style="color:#d9534f">&nbsp;Not Shareable</strong>{% endif %}
+            {% endif %}
         {% endif %}
     </div>
 
