--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -373,7 +373,7 @@
     {% include "irods_upload_add.html" %}
 {%  block modal_publish_resource %}
     <div class="modal fade" id="submit-for-publication-dialog" tabindex="-1" role="dialog"
-         aria-labelledby="submit-for-publication-title" aria-hidden="true">
+         aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -382,16 +382,21 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        Once you submit the resource for publication it cannot be changed again. This will assign a
-                        DOI to the
-                        resource as it stands now and mark it as permanent. To make any changes after this, you
-                        <strong>must</strong>
-                        create a brand new resource. Click "Publish" if you really intend to do this.
+                        Upon submitting the resource for publication it will be permanently published and assigned a
+                        digital object identifier (DOI). This is <strong>final</strong> and changes can only be made
+                        on a new version (copy) of the resource.
                     </p>
+                    <p>
+                         Please confirm that you accept the HydroShare Publication Agreement shown below.
+                    </p>
+                    <div class="iframe-border">
+                        <iframe id="pub-agreement-frame" scrolling="no" src="https://www.hydroshare.org/publication-agreement/"></iframe>
+                    </div>
+                    <input type="checkbox" id="agree-chk"><label for="agree-chk" class="checkbox-label">I accept the HydroShare Publication Agreement.</label>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/publish/">Publish</a>
+                    <a type="button" id="publish-btn" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/publish/" disabled>Publish</a>
                 </div>
             </div>
         </div>
