--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -1,3 +1,15 @@
+{# ======= Resource Publication just published notification =======#}
+{% if cm.raccess.published and just_published %}
+    <div class="col-sm-12">
+        <div class="alert {% if just_created %}alert-success{% else %}alert-warning{% endif %} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>Congratulations! </strong>
+            <span>Your resource has been published. You will see the DOI in the citation for your resource below,
+                but it may take approximately one day for your DOI to become active.</span>
+        </div>
+    </div>
+{% endif %}
+
 {# ======= Missing fields notification =======#}
 {% if not metadata_form and page.perms.change %}
     {% if missing_metadata_elements or title|stringformat:"s" == "Untitled resource" or not cm.has_required_content_files %}
@@ -8,9 +20,9 @@
                 {% if missing_metadata_elements  %}
                     {% if just_created %}
                         <strong>Congratulations! </strong>
-                        <span>Now that your resource has been created the following metadata are still required to make it public or discoverable:</span>
+                        <span>Now that your resource has been created the following metadata are still required to publish it or make it public or discoverable:</span>
                     {% else %}
-                        <span>The following metadata are still required to make the resource public or discoverable:</span>
+                        <span>The following metadata are still required to publish the resource or make the resource public or discoverable:</span>
                     {% endif %}
                     <ul>
                         {% for element in missing_metadata_elements %}
@@ -23,15 +35,15 @@
                 {%  endif %}
                 {%  if not cm.has_required_content_files %}
                         <br>
-                        <span>Content files are required to make the resource public or discoverable.</span>
+                        <span>Content files are required to publish the resource or make the resource public or discoverable.</span>
                 {% endif %}
                 <hr>
                 <span class="glyphicon glyphicon-question-sign"></span>
                 <small> Click on the edit button ( <span class="glyphicon glyphicon-pencil"></span> ) below to edit this resource.</small>
-             </div>
+            </div>
         </div>
-        {% endif %}
     {% endif %}
+{% endif %}
 
 {# ======= Title ======= #}
 <div class="col-sm-12">
